# gen-d

./: .gitignore  LICENSE  README.md  pyproject.toml
cli/: __init__.py  main.py
docs/: ARCHITECTURE.md  PROJECT_SCOPE.md  RESEARCH_ALIGNMENT.md
engine/: __init__.py  models.py
engine/drift/: __init__.py  detector.py
engine/graph/: __init__.py  builder.py
engine/hash/: __init__.py  semantic_hash.py
engine/parser/: __init__.py  extractor.py
engine/storage/: __init__.py  database.py
tests/: __init__.py  fixtures.py  test_drift.py  test_graph.py  test_hash.py  test_parser.py  test_storage.py
tests/fixtures/sample_project/: __init__.py  main.py  utils.py
