[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gen-d"
version = "0.1.0"
description = "A living documentation engine for detecting semantic drift in Python codebases"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Prajein" }
]
keywords = [
    "documentation",
    "semantic-analysis",
    "python",
    "libcst",
    "code-graph",
    "drift-detection"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "libcst>=1.1.0",
    "networkx>=3.0",
    "typer>=0.9.0",
    "rich>=13.0",
    "watchdog>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
gdg = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["engine", "cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
